<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_main"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        android:textSize="40dp" />


    <EditText
        android:id="@+id/emailfield"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/logo"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/gradiant_white"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:hint="@string/email"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/passfield"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/emailfield"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@drawable/gradiant_white"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:hint="@string/senha"
        android:textSize="20dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/register"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@color/transparent"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/esqueceu_a_senha"
        android:textAllCaps="false"
        android:textColor="@color/lightgreen" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/forgetPass"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/criar_conta"
        android:textAllCaps="false"
        android:textColor="@color/lightgreen" />

</RelativeLayout>