<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_main"
    tools:context=".ui.activities.UserDetailsActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/e_mail"
        android:textColor="@color/white"
        android:textSize="20dp" />

        <TextView
            android:id="@+id/email"
            android:layout_below="@id/name"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="15dp"
            android:textColor="@color/white"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/adicionar_cart_o"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/relative01"
        android:layout_width="wrap_content"
        android:layout_below="@id/registerBtn"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cardnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/n_mero"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/textnumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/cardnumber"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/relative02"
        android:layout_width="wrap_content"
        android:layout_below="@id/relative01"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cardname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/nome_com_est_no_cart_o"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/textname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/cardname"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:textColor="@color/white" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relative03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative02"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/cardvenc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/vencimento"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/cardmes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardvenc"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/m_s"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/textmes"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_below="@id/cardmes"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cardano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardvenc"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/cardmes"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/ano"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/textano"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_below="@id/cardmes"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@id/cardmes"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cardcod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/cardano"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/c_digo_de_seguran_a"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/textcod"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_below="@id/cardcod"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@id/cardano"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:textColor="@color/white" />

    </RelativeLayout>

    <Button
        android:visibility="invisible"
        android:id="@+id/finalBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/relative03"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/green_border"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/concluir"
        android:textColor="@color/white"
        android:textSize="15dp" />




</RelativeLayout>