<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/gradiant_main"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/escudoLoja"
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:id="@+id/layout_nomeloja"
        android:layout_below="@id/escudoLoja"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loja"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/nomeLoja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="26sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layout_nomeloja"
        android:layout_marginLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:text="@string/valor"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/valorProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/layout_valor">

        <TextView
            android:text="@string/horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/horarioVenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="26sp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/layout_horario">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:text="@string/data"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/dataVenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="26sp"/>


    </LinearLayout>



</RelativeLayout>